<resources>
    <string name="app_name">SportyReserve</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="welcome_main">Welcome!</string>
    <string name="logout">Logout</string>

    <!-- Registro de usuarios -->
    <string name="email_register">Email</string>
    <string name="telefono_register">Teléfono</string>
    <string name="nombre_register">Nombre</string>
    <string name="apellidos_register">Apellidos</string>
    <string name="password_register">Contraseña</string>
    <string name="nickname_register">Nombre de usuario</string>
    <string name="button_register">Registrarse</string>
    <string name="register_title">Crea tu cuenta</string>
    <string name="register_description">Descubre un amplio abanico de actividades deportivas en grupo.</string>

    <!-- Reservas -->
    <string name="book_title">Crea una reserva</string>
    <string name="book_name">Nombre de la reserva</string>
    <string name="book_privateness">Es pública?</string>
    <string name="book_sport">Deporte</string>
    <string name="book_date">Fecha de reserva</string>
    <string name="book_duration">Duración (min)</string>
    <string name="book_maxParticipants">Número de participantes</string>
    <string name="book_password">Contraseña de la reserva</string>
    <string name="button_book">Crear reserva</string>
    <string name="book_privateness_button_on">Reserva privada</string>
    <string name="book_privateness_button_off">Reserva pública</string>
    <string name="book_track">Pista</string>
    <string name="book_maxParticipantsButton">Dar valor</string>
    <string name="Book_SportsDropdownListHint">Selección de deportes</string>
    <string name="datePickingLabel">Fecha</string>
    <string name="datePickingText">Elige una fecha</string>
    <string name="timePickingLabel">Hora</string>
    <string name="timePickingText">Elige una hora</string>
    <string name="reserveLengthLabel">Duración</string>
    <string name="reserveLengthText">Dar valor</string>

    <string name="nav_user_avatar">Avatar del usuario</string>
    <string name="nav_username">Nombre del usuario</string>

    <string name="reservar_pista">Reservar Pista</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="lista_reservas">Lista de Reservas</string>
    <string name="opciones">Ajustes</string>
    <string name="about">Acerca de</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="reserva_image_description">Image description</string>
  
    <string name="str_no_reservas">No hay reservas</string>
    <string name="str_error_msg">Error ... </string>
    <string name="str_name_team1">Equipo 1</string>
    <string name="str_name_team2">Equipo 2</string>

    <!-- About -->
    <string name="autores">Alejandro, Javier y José</string>
    <string name="TituloAutores">Autores</string>
    <string name="authorsTitleText">Autores</string>
    <string name="authorsText">Alejandro, Javier y José</string>
    <string name="aboutInfoTitleText">Info</string>
    <string name="aboutInfoText">SportyReserve es una aplicación de reservas orientada a deportes, que facilita la planificación de eventos deportivos y compartirlos entre sus usuarios.</string>

    <!-- Detail -->
    <string name="cancel_reserve">Cancelar reserva</string>
    <string name="edit_reserve">Editar</string>
    <string name="start_time_label">Hora Inicial</string>
    <string name="end_time_label">Hora Final</string>
    <string name="expulsar">Expulsar</string>
    <string name="hacer_anfi">Hacer Anfitrón</string>
    <string name="Jugadores">Jugadores</string>
    <string name="Anfitrión">Anfitrión</string>
    <string name="edit_reserve_title">Editar reserva</string>
    <string name="modifyReserveButtonText">Modificar</string>
    <string name="reserve_retrieving_failure">"Error al recuperar los datos de la reserva: "</string>
    <string name="numPlayersText">Número actual de jugadores</string>
    <string name="home_menu">Inicio</string>
    <string name="notifications_option">Notificaciones</string>
    <string name="ValError_NameIsEmpty">La reserva debe tener un nombre</string>
    <string name="ValError_ReserveDateIsPast">La fecha de la reserva debe ser posterior a la actual</string>
    <string name="ValError_InvalidTimetable">La hora no está dentro del horario apto para reservar</string>
    <string name="ValError_InvalidPasswordLength">La contraseña debe tener al menos 8 caracteres</string>
    <string name="ValError_CollisionOnTimeWithPreviousReserve">La reserva coincide en horario con alguna ya existente.</string>
    <string name="Failure_ErrorCheckingPreviousReserves">"Error al comprobar las reservas existentes: "</string>
    <string name="Failure_AddingReserve">"Error al añadir la reserva: "</string>
    <string name="continueButtonText">Continuar</string>
    <string name="onReserveDeletion_ConfirmationMessage">Al ser anfitrión eliminaras toda la reserva. ¿Estás seguro de que quieres eliminarla?</string>
    <string name="cancelationButtonText">Cancelar</string>
    <string name="Title_ReserveDeletion">Eliminación de Reserva</string>
    <string name="Failure_ReserveCouldNotBeModified">Error al modificar la reserva: </string>

    <!-- Toasts -->
    <string name="toast_DeletedReserve">Reserva eliminada</string>
    <string name="toast_FailureOnReserveDeletion">"Error al eliminar la reserva: "</string>
    <string name="toast_YouHaveBeenSuccesfullyRemovedFromReserve">Has sido eliminado de la reserva.</string>
    <string name="toast_FailureOnReserveParticipationRemoval">Error al eliminarte de la reserva: </string>
    <string name="toast_FailureOnReserveGathering">"Error al obtener la reserva: "</string>
    <string name="host_text">Anfitrión</string>
    <string name="my_reserves_text">Mis Reservas</string>
    <string name="Name_ReserveNotificationChannel" translatable="false">Reserva Channel</string>
    <string name="Description_ReserveNotificationChannel">Canal para las notificaciones de la reserva</string>
    <string name="ValError_InvalidEmail">Por favor, introduce un correo electrónico válido</string>
    <string name="ValError_InvalidPhoneNumber">Por favor, introduce un número de teléfono válido</string>
    <string name="ValError_EmptyField">El campo no puede estar vacío.</string>
    <string name="ValError_InvalidUsernameLength">El nombre de usuario debe tener al menos 3 caracteres.</string>
    <string name="Failure_UserRegistration">"Error al registrar el usuario: "</string>
    <string name="Failure_UserCreation">"Error al crear el usuario: "</string>
    <string name="Failure_UsernameVerification">"Error al verificar el nombre de usuario: "</string>
    <string name="Failure_TracksRetrieval">Error al recopilar las pistas de la base de datos</string>
    <string name="Toast_SuccesfullyRemovedUserFromList">Usuario expulsado con éxito.</string>
    <string name="Toast_ErrorRemovingUserFromList">"Error al expulsar al usuario: "</string>
    <string name="makeHostText">Hacer Anfitrion</string>
    <string name="makeHost_ConfirmationMessage">Si haces a otro jugador anfitrion, perderas ese rol. ¿Estás seguro de querer continuar?</string>
    <string name="AcceptButtonText">Aceptar</string>
    <string name="Toast_SuccesfullHostChange">Usuario promovido a anfitrion con éxito.</string>
    <string name="Toast_ErrorOnHostChange">"Error al promover al usuario a anfitrion: "</string>
    <string name="succesfull_registration">Se ha registrado con éxito.</string>
    <string name="failure_on_registration">"Fallo en el registro: "</string>
    <string name="no_notifications_yet">No hay notificaciones todavía.</string>
    <string name="username">Nombre de usuario</string>
    <string name="Error_Unkown">Error desconocido</string>
    <string name="Failure_ReserveNotFound">No se ha encontrado la reserva.</string>
    <string name="Toast_ReserveModified">La reserva ha sido modificada con éxito.</string>
    <string name="Toast_FailedReserveModification">"Fallo al modificar la reserva: "</string>
    <string name="Error_EmailIsRequired">El email es necesario.</string>
    <string name="Error_PasswordIsRequired">La contraseña es necesaria.</string>
    <string name="Toast_LoginSuccesfull">Inicio de sesión satisfactorio.</string>
    <string name="Error_LoginFailed">"Inicio de sesión fallido: "</string>
    <string name="ValError_UsernameAlreadyTaken">Nombre de usuario ya existente.</string>
    <string name="Failure_SportsRetrieval">"Error al recuperar los deportes de la base de datos: "</string>

    <!-- DB names -->
    <string name="name_UsersDB" translatable="false">Users</string>
    <string name="name_BooksDB" translatable="false">Books</string>
    <string name="name_SportsDB" translatable="false">Sports</string>
    <string name="name_TracksDB" translatable="false">Locations</string>

    <!-- Settings -->
    <string name="theme">Tema</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="theme_description">Elige un tema entre distintos estilos</string>
    <string name="change_password_description">Cambia tu contraseña</string>
    <string name="light_theme">Tema Claro</string>
    <string name="dark_theme">Tema Oscuro</string>
    <string name="old_password">Contraseña Actual</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="accept">Aceptar</string>
    <string name="pista">Pista</string>
    <string name="deporte">Deporte</string>
    <string name="numero_maximo_de_jugadores">Numero maximo de jugadores</string>
    <string name="numero_actual_de_jugadores">Numero actual de jugadores</string>
    <string name="Failure_InvalidPassword" >La contraseña debe tener al menos 8 caracteres</string>
    <string name="Toast_ErrorRetrievingNotifications">"Error recuperando las notificaciones: "</string>

    <!-- Reserves List and AlertDialogs -->
    <string name="dateBeginPickerText">Fecha Inicio</string>
    <string name="dateEndPickerText">Fecha Final</string>
    <string name="str_bt_lookForReserves">Buscar</string>
    <string name="str_NewPlayer">Nuevo Jugador</string>
    <string name="str_reservetile_freeplaces">plazas libres</string>
    <string name="str_alert_adduser_title">Añadir como jugador</string>
    <string name="str_alert_adduser_message">"Vas a añadirte como jugador a la reserva :    "</string>
    <string name="str_alert_deleteuser_title">Abandonar reserva</string>
    <string name="str_alert_deleteuser_message">"Vas a eliminarte como jugador de la reserva : "</string>
    <string name="str_alert_imhost_title">"   Eres el Anfitrión"</string>
    <string name="str_alert_imhost_message">No puedes borrarte de la reserva desde aquí</string>
    <string name="str_alert_iminreserve_title">Ya estás en la reserva</string>
    <string name="str_alert_continue">Continuar</string>
    <string name="str_alert_cancel">Cancelar</string>
    <string name="str_alert_wrongpasswd">Contraseña Incorrecta</string>
    <string name="str_error_searchdates">"   Error en las fechas de búsqueda"</string>




    <string name="str_title_chooser_avatarImage">Elige tu imagen de avatar:</string>
    <string name="wikiTitleText">Wiki</string>
    <string name="wikiText">https://github.com/iskelazz/SportyReserve/wiki</string>
    <string name="conflicting_reserve">Lo sentimos, ya hay una reserva que coincide en horario en esa misma pista.</string>


</resources>