<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mis_reservas"
            android:icon="@drawable/baseline_event_black_24"
            android:title="@string/mis_reservas" />
        <item
            android:id="@+id/nav_lista_reservas"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/lista_reservas" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_opciones"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/opciones" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_black_24"
            android:title="@string/logout" />
    </group>
</menu>
