<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutInfoTitleText"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutInfoText"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/authorsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorsTitleText"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/authorsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorsText"
        android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>