<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activities.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/book_title"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!--
        <TextView
            android:id="@+id/registerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/register_description"
            android:textSize="20sp"
            android:textAlignment="center" />
        -->

        <!-- Deporte -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_sport"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>
            <Spinner
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/Book_SportsDropdownList"
                android:hint="@string/Book_SportsDropdownListHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown">
            </Spinner>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Pista -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_track"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <Spinner
                android:id="@+id/Book_TracksDropdownList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintTop_toTopOf="parent"></Spinner>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Visibilidad -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_privateness"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <ToggleButton
                android:id="@+id/book_privateness_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/book_privateness_button_off"
                android:textOn="@string/book_privateness_button_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ToggleButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Book_passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password_register"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/outline_lock_black_20"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Book_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Capacidad Máxima -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_maxParticipants"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <Button
                android:id="@+id/Book_MaxParticipantsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_maxParticipantsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintTop_toTopOf="parent"></Button>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/bookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/button_book"
            android:textColor="@android:color/white"
            android:enabled="false"/>

    </LinearLayout>

</ScrollView>
